# PX4-Rover

./: README.md  posix_sitl.launch  sitl_target.cmake
blender_gazebo/: CMakeLists.txt  package.xml
blender_gazebo/sdf/: landmark.sdf.xacro
blender_gazebo/sdf/meshes/: ERC_Sign.stl
blender_gazebo/worlds/: actually_empty_world.world  marsyard2021.world.xacro
blender_gazebo/worlds/cosmonaut-dae/: cosmonaut.dae
fpv_cam_up/: fpv_cam.sdf  model.config
iris_fpv_cam/: iris_fpv_cam.sdf
marsyard/meshes/aruco_31/: id31.dae  id31_v2.dae
marsyard/meshes/aruco_69/: id69.dae
marsyard/urdf/: marsyard_Grid.urdf.xacro
rover_21/: model.config  rover_21.sdf
rover_21/meshes/: wheel_link.stl
rover_21/rover_21_description_velodyne/launch/: gazebo.launch
rover_21/rover_21_description_velodyne/urdf/: rover_21_description_velodyne.urdf.xacro
