<?xml version="1.0"?>
<package format="2">
  <name>blender_gazebo</name>
  <version>0.0.4</version>
  <description>The blender_gazebo package</description>

  <maintainer email="david_0429@hotmail.com">Dave Niewinski</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <build_depend>xacro</build_depend>
  <export>
    <gazebo_ros gazebo_media_path="${prefix}"/>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
  </export>
</package>
